# LLMCompiler-us

./: .gitignore  .windsurfrules  debug_r2r.py  error.txt  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  start_app.ps1
__tests__/: conftest.py  test_list_docs.py  test_llm_compiler.py  test_orchestrator.py  test_r2r_docstore.py  test_r2r_list.py  test_search.py  test_temperature_endpoints.py
core/: base_orchestrator.py  chat.py  llm_manager.py  models.py  orchestrator.py
db/: init_db.py  measurements.db  test_query.py
frontend/: package-lock.json  package.json  postcss.config.ts  tailwind.config.ts
frontend/src/: app.css
frontend/src/lib/components/Chat/: ChatContainer.svelte  ChatInput.svelte  ChatMessage.svelte
frontend/src/lib/components/DataTable/: DataTable.svelte
frontend/src/lib/services/: chat.ts
frontend/src/lib/stores/: chat.ts
frontend/src/routes/: +layout.svelte  +page.svelte
llmcompiler_backup/: GLOSSARY.md  __init__.py  run_llm_compiler.py
llmcompiler_backup/configs/ittpc/: __init__.py  configs.py  gpt_prompts.py  tools.py
llmcompiler_backup/configs/parallelqa/: tools.py
llmcompiler_backup/src/agents/: agent.py  structured_chat_agent.py  tools.py
llmcompiler_backup/src/chains/: chain.py  llm_chain.py  llm_math_chain.py
llmcompiler_backup/src/docstore/: r2r_rag.py  wikipedia.py
llmcompiler_backup/src/executors/: agent_executor.py  schema.py
llmcompiler_backup/src/llm_compiler/: llm_compiler.py  output_parser.py  planner.py  task_fetching_unit.py
llmcompiler_backup/src/react/: base.py  output_parser.py
llmcompiler_backup/src/tools/: base.py
llmcompiler_backup/src/utils/: __init__.py  model_utils.py
llmcompiler_backup/utils/: __init__.py
node_red/: .config.nodes.json  .config.runtime.json  .config.runtime.json.backup  deploy.py  flows.json  generate_flow.py  start_node_red.bat  start_node_red.ps1
node_red/backups/: flows_backup.json
node_red/flows/: base_flow.py  jokes_flow.py  temperature_flow.py  temperature_list_flow.py
node_red/node_red/backups/: flows_backup.json
node_red/utils/: node_red.py
tools/: __init__.py  base_tool.py  dependencies.py  jokes.py  jokes_tools.py  models.py  node_red_tools.py  temperature_query.py  temperature_tools.py  tools_config.yaml  tools_manager.py
