[tool.poetry]
name = "red-node-pimp"
version = "0.1.0"
description = "FastAPI application with Node-RED integration for temperature monitoring"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "core", format = "wheel" },
    { include = "tools", format = "wheel" },
    { include = "llmcompiler", format = "wheel" }
]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
requests = "*"
pydantic = "*"
python-multipart = "*"
openai = "*"
logfire = "*"
aiohttp = "*"
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langgraph = "*"
langsmith = "*"
langchain-openai = "*"
loguru = "*"
bs4 = "*"
numexpr = "*"
tiktoken = "*"
setuptools = "^75.8.0"
r2r = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
